@@ -8,6 +8,7 @@ Jump Start Changelog
 * Fixed issues with main menu dropdowns not displaying over some items.
 * Fixed handling of private and password-protected pages with custom layouts.
 * Fixed compatibility with [Theme Blvd Layouts to Posts](http://wordpress.org/plugins/theme-blvd-layouts-to-posts/) plugin.
+* Updated breadcrumbs HTML markup to match Twitter Bootstrap 2.3 changes.
 
 --------------------------------------------------------------
 
